{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 874,
  "lineage": "bf80839a-d89c-cc3f-e419-4b494c5367cc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-070b7c2988d4e2c89",
            "arn": "arn:aws:ec2:us-east-1:058264150123:instance/i-068c70459ff6812fd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-068c70459ff6812fd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-098f53c874bf26335",
            "private_dns": "ip-10-0-1-223.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.223",
            "public_dns": "ec2-54-226-121-246.compute-1.amazonaws.com",
            "public_ip": "54.226.121.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08b445eef5cadbcc6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00989949b6be4ee41",
            "tags": {
              "Name": "ExampleInstance"
            },
            "tags_all": {
              "Name": "ExampleInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00fbc65af51adc4ad"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.allow_tls",
            "aws_subnet.main",
            "aws_vpc.example",
            "data.aws_ami.amazon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-070b7c2988d4e2c89",
            "arn": "arn:aws:ec2:us-east-1:058264150123:instance/i-00ad26183aefcd1f8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00ad26183aefcd1f8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0880806e0ba4212a8",
            "private_dns": "ip-10-0-2-54.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.54",
            "public_dns": "ec2-3-82-61-237.compute-1.amazonaws.com",
            "public_ip": "3.82.61.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01e47c07b207fbd28",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c73ac149a0c8acb4",
            "tags": {
              "Name": "ExampleInstance_from_main_1"
            },
            "tags_all": {
              "Name": "ExampleInstance_from_main_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00fbc65af51adc4ad"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.allow_tls",
            "aws_subnet.main1",
            "aws_vpc.example",
            "data.aws_ami.amazon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264150123:internet-gateway/igw-0da0f48c6023aeb8f",
            "id": "igw-0da0f48c6023aeb8f",
            "owner_id": "058264150123",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-084c3068ec0cb83a3"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264150123:route-table/rtb-0319f7a3dd1c70efd",
            "id": "rtb-0319f7a3dd1c70efd",
            "owner_id": "058264150123",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0da0f48c6023aeb8f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-084c3068ec0cb83a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fc43e45e2529cb7",
            "route_table_id": "rtb-0319f7a3dd1c70efd",
            "subnet_id": "subnet-00989949b6be4ee41"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.example",
            "aws_subnet.main",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062d7338ce1507a5b",
            "route_table_id": "rtb-0319f7a3dd1c70efd",
            "subnet_id": "subnet-0c73ac149a0c8acb4"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.example",
            "aws_subnet.main1",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264150123:security-group/sg-00fbc65af51adc4ad",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-00fbc65af51adc4ad",
            "ingress": [],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "058264150123",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-084c3068ec0cb83a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264150123:subnet/subnet-00989949b6be4ee41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00989949b6be4ee41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264150123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_main"
            },
            "tags_all": {
              "Name": "Public_main"
            },
            "vpc_id": "vpc-084c3068ec0cb83a3"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264150123:subnet/subnet-0c73ac149a0c8acb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c73ac149a0c8acb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264150123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_main_1"
            },
            "tags_all": {
              "Name": "Public_main_1"
            },
            "vpc_id": "vpc-084c3068ec0cb83a3"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264150123:vpc/vpc-084c3068ec0cb83a3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09cfe40433bff50f4",
            "default_route_table_id": "rtb-0abcf2aa0731fb084",
            "default_security_group_id": "sg-09ed4429e84aefcfd",
            "dhcp_options_id": "dopt-073420f76b5c02f76",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-084c3068ec0cb83a3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0abcf2aa0731fb084",
            "owner_id": "058264150123",
            "tags": {
              "Name": "testing2"
            },
            "tags_all": {
              "Name": "testing2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264150123:security-group-rule/sgr-0476c1c423b8907a9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0476c1c423b8907a9",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00fbc65af51adc4ad",
            "security_group_rule_id": "sgr-0476c1c423b8907a9",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264150123:security-group-rule/sgr-08d1cd0eea83f0094",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-08d1cd0eea83f0094",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00fbc65af51adc4ad",
            "security_group_rule_id": "sgr-08d1cd0eea83f0094",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264150123:security-group-rule/sgr-0813d0e0ff7247f16",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0813d0e0ff7247f16",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00fbc65af51adc4ad",
            "security_group_rule_id": "sgr-0813d0e0ff7247f16",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_mlp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264150123:security-group-rule/sgr-0ccfe8813f170a2d7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5000,
            "id": "sgr-0ccfe8813f170a2d7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00fbc65af51adc4ad",
            "security_group_rule_id": "sgr-0ccfe8813f170a2d7",
            "tags": null,
            "tags_all": {},
            "to_port": 5000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_vpc.example"
          ]
        }
      ]
    }
  ]
}